fixed Html issue

--- a/popup.html
+++ b/popup.html
@@ -10,10 +10,11 @@
         <label> 
         <span style="top: 10px; position:relative; ">
             <span style="padding-right:5px;">Turn On?</span>
-            <input type="checkbox" id="" name=""/>
+            <input type="checkbox" id="opt" name="opt"/>
         </span>
         </label>
-        <script src="settings.js"></script>
+
+        <script src="setting.js"></script>
     </body>
 </html>
 
