--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,18 @@
 <!doctype html>
 <html>
-  <head>
-  </head>
+    <head>
+        <link rel="stylesheet" href="http://s3-ak.buzzfed.com/static/css/webfonts.css?v=1370354313" type="text/css" />
+    </head>
 
-    <body style="width: 250px; height: 100px;">
-        Mainstream News Blocker<br>
-        ----------------------------------- <br>
-        <label> 
-            <span style="top: 10px; position:relative; ">
-                <span style="padding-right:5px;">Turn On?</span>
-                <input type="checkbox" id="opt" name="opt"/>
-            </span>
-        </label>
+    <body>
+        <div style="width:200px; height:16px; font-family: Helvetica, Arial, sans-serif; font-weight: 700;">
+            <form id="eradicator" action="" method="">
+                <label>
+                    <input type="checkbox" id="opt" name="opt" /> <span style="position:relative; top:0px;">Eradicate Mainstream Media?</span>
+                </label>
+            </form>
+        </div>
 
         <script src="setting.js"></script>
     </body>
 </html>
-
