--- a/popup.html
+++ b/popup.html
@@ -1,18 +1,14 @@
 <!doctype html>
 <html>
-    <head>
-        <link rel="stylesheet" href="http://s3-ak.buzzfed.com/static/css/webfonts.css?v=1370354313" type="text/css" />
-    </head>
-
-    <body>
-        <div style="width:200px; height:16px; font-family: Helvetica, Arial, sans-serif; font-weight: 700;">
+<body>
+        <div style="width:200px; height:20px;">
             <form id="eradicator" action="" method="">
                 <label>
-                    <input type="checkbox" id="opt" name="opt" /> <span style="position:relative; top:0px;">Eradicate Mainstream Media?</span>
+                    <input type="checkbox" id="opt" name="opt" /> 
+                    <span style="position:relative; top:0px;">Eradicate Mainstream Media?</span>
                 </label>
             </form>
         </div>
-
         <script src="setting.js"></script>
     </body>
 </html>
